27 March 2020 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/TempAnnotationController.php:
 * frontend/clarin/js/directives/annotation-visualizer.js:
 * frontend/clarin/js/directives/document/annotation-text-text.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/js/services/restoreAnnotationService.js:
 * frontend/clarin/js/services/text-widget-api.js:
 * frontend/clarin/templates/directives/annotation-visualizer.html: Added
 support for a new type of Annotation, Document Attributes. Currently
 available only for Button Annotator schemas. A sample schema can be:
 <group type="document_attributes" name="Document Metadata" button_number="1"
 sort="false"><value type="paragraph" name="author">Author</value></group>.

25 March 2020 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/css/clarin.css:
 * frontend/clarin/js/config/ocLazyLoadConfig.js:
 * frontend/clarin/js/directives/annotator-widget.js:
 * frontend/clarin/js/directives/dom-helpers.js:
 * frontend/clarin/js/services/annotatorsTemplateService.js:
 * frontend/clarin/js/services/buttonAnnotatorService.js:
 * frontend/clarin/templates/annotation.html: Added a directive which moves
 elements whose class contains "document- attributes" to document attribute
 annotation. Functionality to act like document attribute annotation still
 missing.

 * frontend/clarin/css/clarin.css:
 * frontend/clarin/js/controllers/annotationCtrl.js:
 * frontend/clarin/js/directives/dom-helpers.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/templates/annotation.html: Added two tabs above the
 document editor.

23 March 2020 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/js/controllers/modals/selectDocumentModalCtrl.js:
 * frontend/clarin/templates/modals/select-document-modal.html: Fixed a bug,
 where the user can select a schema with empty attributes.
